--- a/final_chemin/pom.xml
+++ b/final_chemin/pom.xml
@@ -51,6 +51,15 @@
           <version>4.12</version>
           <scope>test</scope>
       </dependency>
+      
+      <!-- https://mvnrepository.com/artifact/servlets.com/cos -->
+<dependency>
+    <groupId>servlets.com</groupId>
+    <artifactId>cos</artifactId>
+    <version>05Nov2002</version>
+</dependency>
+
+      
    
       <!-- Spring -->
       <dependency>
