--- a/final_chemin/pom.xml
+++ b/final_chemin/pom.xml
@@ -22,6 +22,18 @@
       
 	<dependencies>
 	
+		<!-- mail 관련 -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+	
 	  <!-- jpg파일변환 -->
 	  <!--https://mvnrepository.com/artifact/commons-codec/commons-codec -->
 	  <dependency>
